Bug 1810876 - Throttle animations in opacity: 0 root. r=hiro

Differential Revision: https://phabricator.services.mozilla.com/D167146