dom/animation/KeyframeEffect.cpp
@@ -2084,7 +2084,7 @@ KeyframeEffect::MatchForCompositor KeyframeEffect::IsMatchForCompositor(
   // If we know that the animation is not visible, we don't need to send the
   // animation to the compositor.
   if (!aFrame->IsVisibleOrMayHaveVisibleDescendants() ||
-      IsDefinitivelyInvisibleDueToOpacity(*aFrame) ||
+      CanOptimizeAwayDueToOpacity(*this, *aFrame) ||
       aFrame->IsScrolledOutOfView()) {
     return KeyframeEffect::MatchForCompositor::NoAndBlockThisProperty;
   }
